# stalcraft-trading-assistant

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Caddyfile  RATE_LIMIT_REPORT.md  RATE_LIMIT_VERIFIED.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  rate_limit_full_results.json  rate_limit_period_results.json  rate_limit_test_results.json  test_rate_limit.py  test_rate_limit_full.py  test_rate_limit_period.py
backend/: Dockerfile  celerybeat-schedule  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_is_admin.py  0003_collected_data_liquid_fields.py  0004_market_stats_sell_options.py  0005_collected_data_user_nullable.py  0006_market_stats_user_nullable.py  0007_global_item_scan.py  0008_master_items_icon_path.py  0009_market_stats_best_buy_time.py  0010_market_stats_hours_by_day.py  0011_master_items_color.py  0012_watchlist_quality_enchant.py  0013_add_is_approved.py  0014_market_stats_volatility_30d.py  0015_sales_volume_30d.py  0016_sales_history_item_region_idx.py  0017_purchase_rec_rename_price_fields.py  0018_global_item_scan_history.py  0019_user_feed_exclusion.py  0020_global_scan_quality_enchant.py  0021_drop_feed_tables.py  0022_master_items_bind_state.py  0023_market_demand_signals.py  0024_signal_outcomes.py  0025_dedup_sales_history.py  0026_user_tiers.py  0027_market_stats_48h.py  0028_registration_settings.py  0029_favorites_limit_override.py  0030_news_table.py  0031_emission_events.py  0032_sales_collected_at_idx.py  0033_emission_end_notified.py  (+5 more)
backend/app/: main.py
(+179 files in other folders)
