[project]
name = "stalcraft-trading-assistant"
version = "0.1.0"
description = "Аналитика аукциона Stalcraft X"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",

    # Database
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.13.3",

    # Redis / Celery
    "celery[redis]==5.4.0",
    "redis==5.2.0",
    "aioredis==2.0.1",

    # Auth
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",

    # HTTP client
    "httpx==0.27.2",

    # Settings & validation
    "pydantic[email]==2.9.2",
    "pydantic-settings==2.6.0",

    # Analytics
    "numpy==2.1.3",
    "pandas==2.2.3",

    # Telegram
    "python-telegram-bot==21.6",

    # Utils
    "python-dotenv==1.0.1",
    "tenacity==9.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[tool.uv]
package = false
